--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require":
     {
-        "silverstripe/framework": "5"
+        "silverstripe/framework": "^4 || ^5"
     },
     "autoload": {
         "psr-4": {
